syntax = "proto3";

option csharp_namespace = "StockPrices.Temp.ConsoleApp.Protos";

package price;

service Pricing {
	rpc GetCurrentPrice (StockPriceRequest) returns (StockPriceResponse);
	rpc GetPriceStream (StockPriceRequest) returns (stream StockPriceResponse);
}

enum Context {
	QUERY = 0;
	BUY = 1;
	SELL = 2;
}

message StockPriceRequest {
	string symbol = 1;
	Context context = 2;
	string apiKey = 3;
}

message StockPriceResponse {
	double price = 1;
}